css login company

--- a/client/company/views/css/style.css
+++ b/client/company/views/css/style.css
@@ -33,7 +33,17 @@
 
 /*-- Reset Code --*/
 
-
+* {
+	-webkit-box-sizing: content-box;
+	   -moz-box-sizing: content-box;
+			box-sizing: content-box;
+  }
+  *:before,
+  *:after {
+	-webkit-box-sizing: content-box;
+	   -moz-box-sizing: content-box;
+			box-sizing: content-box;
+  }
 
 /*-- Index-Page-Styling --*/
 
