--- a/client/company/views/postmanager.html
+++ b/client/company/views/postmanager.html
@@ -13,7 +13,7 @@
 <!-- PAGE TITLE -->
 <div class="page-title">
     <h2>
-        <span class="fa fa-arrow-circle-o-left"></span> Quản lý bài dăng </h2>
+        <span class="fa fa-arrow-circle-o-left"></span> Quản lý bài Đăng </h2>
 </div>
 <!-- END PAGE TITLE -->
 
@@ -74,8 +74,8 @@
                                 <td>
                                     <a href="#edit/{{post.idpost}}" class=" btn btn-success btn-sm " >
                                         Edit </a>
-                                    <a href="#" class=" btn btn-danger btn-sm " ng-click="deletePost(post.idpost)">
-                                        Delete </a>
+                                    <button class=" btn btn-danger btn-sm " ng-click="deletePost(post.idpost)">
+                                        Delete </button>
                                 </td>
                             </tr>
                         </tbody>
