--- a/client/company/views/login.html
+++ b/client/company/views/login.html
@@ -77,15 +77,14 @@
                     <button type="submit" value="Register">submit</button>
                 </div>
                 <h1 class="text-notifi" ng-if="showNotifi"> {{textNotifi}} </h1>
-                
             </form>
         </div>
     </div>
 </div>
 
-<script type="text/javascript" src="views/company/js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="company/views/js/jquery-2.1.4.min.js"></script>
 <!-- pop-up-box-js-file -->
-<script src="views/company/js/jquery.magnific-popup.js" type="text/javascript"></script>
+<script src="company/views/js/jquery.magnific-popup.js" type="text/javascript"></script>
 <!--//pop-up-box-js-file -->
 <script>
     $(document).ready(function () {
