--- a/client/company/views/post.html
+++ b/client/company/views/post.html
@@ -18,7 +18,6 @@
 <div class="page-content-wrap">
     <div class="block">
         <div class="col-md-11">
-
             <form class="form-horizontal center-block" ng-submit="createPost()">
                 <div class="form-group">
                     <label class="col-md-2 control-label">Tiêu đề:</label>
@@ -29,18 +28,18 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Hình thức:</label>
                     <div class="col-md-4">
-                        <select class="form-control select" ng-model="postDetail.category" data-style="btn-success">
-                            <option>Partime</option>
-                            <option>Fulltime</option>
-                            <option>Partime/Fulltime</option>
+                        <select class="form-control " ng-model="postDetail.category" data-style="btn-success">
+                            <option value="Partime">Partime</option>
+                            <option value="Fulltime">Fulltime</option>
+                            <option value="Partime/Fulltime" selected>Partime/Fulltime</option>
                         </select>
                     </div>
 
                     <label class="col-md-2 control-label">Hạn nộp hồ sơ:</label>
                     <div class="col-md-4">
                         <div class="input-group">
-                            <ng-datepicker ng-required="true" native-class="form-control input-text" ng-model="postDetail.expired" dateFormat="dd/MM/yy"
-                                minDate="-15D" maxDate="+1M +10D"></ng-datepicker>
+                            <ng-datepicker ng-required="true" native-class="form-control input-text" ng-model="postDetail.expired" dateFormat="yyyy/mm/dd"
+                                minDate="-15D"></ng-datepicker>
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
@@ -51,10 +50,8 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Ngành nghề:</label>
                     <div class="col-md-2">
-                        <select class="form-control select" ng-model="postDetail.career" data-style="btn-success">
-                            <option>Partime</option>
-                            <option>Fulltime</option>
-                            <option>Partime/Fulltime</option>
+                        <select class="form-control select" ng-model="postDetail.idcareer" data-style="btn-success">
+                            <option ng-repeat="option in listCareer" ng-selected="{{option.idcareer == postDetail.idcareer}}" value="{{option.idcareer}}">{{option.name}}</option>
                         </select>
                     </div>
 
@@ -77,7 +74,34 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Kĩ năng:</label>
                     <div class="col-md-10">
-                        <tags-input native-class="form-control input-lg" ng-model="postDetail.skill"></tags-input>
+                        <tags-input ng-model="postDetail.skill" display-property="name" placeholder="Thêm Kỹ Năng" replace-spaces-with-dashes="false"
+                            add-from-autocomplete-only="true" template="tag-template">
+                            <auto-complete source="loadSkills($query)" min-length="0" load-on-focus="true" load-on-empty="true" template="autocomplete-template"></auto-complete>
+                        </tags-input>
+
+                        <script type="text/ng-template" id="tag-template">
+                            <div class="tag-template">
+                              <div class="left-panel">
+                                <img ng-src="http://mbenford.github.io/ngTagsInput/images/flags/{{data.flag}}" ng-if="data.flag"/>
+                              </div>
+                              <div class="right-panel">
+                                <span>{{$getDisplayText()}}</span>
+                                <a class="remove-button" ng-click="$removeTag()">&#10006;</a>
+                              </div>
+                            </div>
+                          </script>
+
+                        <script type="text/ng-template" id="autocomplete-template">
+                            <div class="autocomplete-template">
+                              <!-- <div class="left-panel">
+                                <img ng-src="http://mbenford.github.io/ngTagsInput/images/flags/{{data.flag}}" />
+                              </div> -->
+                              <div class="right-panel">
+                                <span ng-bind-html="$highlight($getDisplayText())"></span>
+                              </div>
+                            </div>
+                          </script>
+                        <!-- <tags-input native-class="form-control input-lg" ng-model="postDetail.skill"></tags-input> -->
                     </div>
                 </div>
 
